Add bundled stats dashboard and TOML config